Add initial project files including HTML, CSS, JS, and images

--- a/eltromax/index.html
+++ b/eltromax/index.html
@@ -84,6 +84,18 @@
                     </div>
                 </div>
             </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse amet dolorem quam pariatur possimus nobis praesentium rem perferendis sit porro. Odit consequatur nostrum tenetur id perspiciatis autem ratione veniam nisi.
+            Iusto a repellendus sunt deleniti cupiditate cumque, deserunt veritatis facere esse doloribus ad est suscipit nesciunt voluptatum praesentium unde similique earum atque molestias reprehenderit laborum vitae mollitia? Nesciunt, quas dolorem.
+            Consequatur sapiente eveniet fugiat excepturi dolorum officiis quidem, iste dolor, velit numquam expedita. Quibusdam vero nostrum, voluptatum quaerat ipsum voluptas libero quae, distinctio beatae, sit eos aut harum qui impedit.
+            Est, saepe non? Natus libero numquam dolores consectetur, et repellendus nobis. Vitae non eaque provident cumque magni error, odio possimus ratione perspiciatis velit quae atque quod saepe illum nesciunt optio.
+            Recusandae esse ex, reiciendis vitae laboriosam unde, illum itaque dolorum quam eligendi autem deleniti aut voluptas a repellendus at, architecto facilis eos et libero. Illum consectetur provident natus maxime labore.
+            Cumque porro voluptate doloribus dolore obcaecati necessitatibus laborum quae non quasi nam alias autem dolorem laboriosam neque impedit hic asperiores tempora numquam, cupiditate, molestiae nisi dolores. Quidem sint facilis corrupti?
+            Eum quam omnis iure facere sapiente repudiandae magni aliquam animi non sed reiciendis natus, ullam nulla suscipit libero a iusto temporibus aspernatur officia eveniet asperiores exercitationem maxime velit optio. Laudantium?
+            Ea vel ipsum facilis. Architecto officiis, iure, ut molestiae iusto voluptates itaque soluta esse recusandae reiciendis suscipit nobis hic labore, deserunt quod optio veniam odio quos numquam consectetur mollitia dolorem!
+            Sunt quasi perspiciatis, maiores inventore, corporis quia nulla accusamus delectus laborum at voluptatum officiis natus similique rerum reprehenderit, eos fugiat. Eligendi ab maiores alias consequuntur vitae similique itaque blanditiis cupiditate.
+            Vel tempore quae quo totam rerum eveniet. Illum ducimus perferendis iste exercitationem repellendus numquam ipsum aut nemo possimus fugiat iure nesciunt dicta neque nulla odit deserunt expedita aliquam, atque reiciendis.
+            Modi sed culpa facilis labore doloribus autem animi. Fugit totam libero dolorum voluptatibus aliquid sed eveniet placeat similique labore impedit, corrupti quia asperiores eos aut dicta ratione, sapiente sequi modi.
+            Esse atque quas officia numquam optio, repellendus dignissimos autem tempora hic perferendis maiores tempore nobis cum commodi obcaecati veritatis culpa unde quam cupiditate necessitatibus quis aliquam corrupti molestias eveniet. Ea.</p>
         </main>
         <script src="index.js" async defer></script>
     </body>
