--- a/eltromax/index.html
+++ b/eltromax/index.html
@@ -36,6 +36,7 @@
             </div>
             </div>
         </nav>
+        
         <div id="dropdown-nav">
             <div id="dropdown-contnet">
                 <div class="dropdown-link">O NAS</div>
@@ -50,6 +51,7 @@
             </div>
         </div>
         <main>
+            <h2>NASZA OFERTA</h2>
             <div id="cards">
                 <div class="card">
                     <img src="fotowoltaika.jpeg" alt="Fotowoltaika">
@@ -83,19 +85,54 @@
                         <a href="#">Dowiedz się więcej</a>
                     </div>
                 </div>
+                <div class="card">
+                    <img src="intelignete-sterowanie.jpg" alt="Inteligentne Sterowanie">
+                    <h4>Pompy ciepła</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium porro ad voluptatem placeat cum inventore sit!</p>
+                    <div class="card-button">
+                        <a href="#">Dowiedz się więcej</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="intelignete-sterowanie.jpg" alt="Inteligentne Sterowanie">
+                    <h4>Klimatyzacja</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium porro ad voluptatem placeat cum inventore sit!</p>
+                    <div class="card-button">
+                        <a href="#">Dowiedz się więcej</a>
+                    </div>
+                </div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse amet dolorem quam pariatur possimus nobis praesentium rem perferendis sit porro. Odit consequatur nostrum tenetur id perspiciatis autem ratione veniam nisi.
-            Iusto a repellendus sunt deleniti cupiditate cumque, deserunt veritatis facere esse doloribus ad est suscipit nesciunt voluptatum praesentium unde similique earum atque molestias reprehenderit laborum vitae mollitia? Nesciunt, quas dolorem.
-            Consequatur sapiente eveniet fugiat excepturi dolorum officiis quidem, iste dolor, velit numquam expedita. Quibusdam vero nostrum, voluptatum quaerat ipsum voluptas libero quae, distinctio beatae, sit eos aut harum qui impedit.
-            Est, saepe non? Natus libero numquam dolores consectetur, et repellendus nobis. Vitae non eaque provident cumque magni error, odio possimus ratione perspiciatis velit quae atque quod saepe illum nesciunt optio.
-            Recusandae esse ex, reiciendis vitae laboriosam unde, illum itaque dolorum quam eligendi autem deleniti aut voluptas a repellendus at, architecto facilis eos et libero. Illum consectetur provident natus maxime labore.
-            Cumque porro voluptate doloribus dolore obcaecati necessitatibus laborum quae non quasi nam alias autem dolorem laboriosam neque impedit hic asperiores tempora numquam, cupiditate, molestiae nisi dolores. Quidem sint facilis corrupti?
-            Eum quam omnis iure facere sapiente repudiandae magni aliquam animi non sed reiciendis natus, ullam nulla suscipit libero a iusto temporibus aspernatur officia eveniet asperiores exercitationem maxime velit optio. Laudantium?
-            Ea vel ipsum facilis. Architecto officiis, iure, ut molestiae iusto voluptates itaque soluta esse recusandae reiciendis suscipit nobis hic labore, deserunt quod optio veniam odio quos numquam consectetur mollitia dolorem!
-            Sunt quasi perspiciatis, maiores inventore, corporis quia nulla accusamus delectus laborum at voluptatum officiis natus similique rerum reprehenderit, eos fugiat. Eligendi ab maiores alias consequuntur vitae similique itaque blanditiis cupiditate.
-            Vel tempore quae quo totam rerum eveniet. Illum ducimus perferendis iste exercitationem repellendus numquam ipsum aut nemo possimus fugiat iure nesciunt dicta neque nulla odit deserunt expedita aliquam, atque reiciendis.
-            Modi sed culpa facilis labore doloribus autem animi. Fugit totam libero dolorum voluptatibus aliquid sed eveniet placeat similique labore impedit, corrupti quia asperiores eos aut dicta ratione, sapiente sequi modi.
-            Esse atque quas officia numquam optio, repellendus dignissimos autem tempora hic perferendis maiores tempore nobis cum commodi obcaecati veritatis culpa unde quam cupiditate necessitatibus quis aliquam corrupti molestias eveniet. Ea.</p>
+            <h2>WSPÓŁPRACE</h2>
+            <p>Współpracujemy z wieloma firmami z całej Polski</p>
+            <div id="partners">
+                <div class="partner">
+                    <img src="partners/malpol.png" alt="Partner 1">
+                </div>
+                <div class="partner">
+                    <img src="partners/strus-2-removebg-preview.png" alt="Partner 2">
+                </div>
+                <div class="partner">
+                    <img src="partners/roleks.png" alt="Partner 3">
+                </div>
+                <div class="partner">
+                    <img src="partners/foldruk.png" alt="Partner 4">
+                </div>
+                <div class="partner">
+                    <img src="partners/plastan.png" alt="Partner 5">
+                </div>
+                <div class="partner">
+                    <img src="partners/topaz.jpg" alt="Partner 6">
+                </div>
+                <div class="partner">
+                    <img src="partners/mostostal.png" alt="Partner 7">
+                </div>
+                <div class="partner">
+                    <img src="partners/frigodor.png" alt="Partner 8">
+                </div>
+                <div class="partner">
+                    <img src="partners/diagmost.png" alt="Partner 9">
+                </div>
+            </div>
         </main>
         <script src="index.js" async defer></script>
     </body>
